fix: remove extra padding on tree, adj footer size
- Remove the extra 20px on the left of the tree
- Add 15px padding to sides of footer to match the header
- Check for existance of $ in test to make it more reliable

--- a/app/Resources/assets/sass/cftree/view.scss
+++ b/app/Resources/assets/sass/cftree/view.scss
@@ -67,7 +67,6 @@ body{
     overflow:auto;
     padding:3px;
     border-width:0;
-    padding-left:20px;
 }
 .assocGroupFilter[style="display:none"] ~ #tree1Section {
     height: calc(100% - 122px);
