--- a/app/Resources/assets/sass/styles.scss
+++ b/app/Resources/assets/sass/styles.scss
@@ -42,6 +42,7 @@ footer {
     left: 0;
     position: absolute;
     width: 100%
+    padding: 0 15px;
 }
 
 footer .navbar-default {
